ITALIAN: Italian RM 2.2 UI Bundle based on EN rev71684
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@73626 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-define-roles.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-define-roles.get_it.properties
@@ -1,11 +1,11 @@
-message.get-roles-failure=Impossibile recuperare i ruoli utente: {0}
-message.get-role-failure=Impossibile recuperare le funzionalit\u00e0 del ruolo: {0}
+message.get-roles-failure=Impossibile recuperare ruoli utente: {0}
+message.get-role-failure=Impossibile recuperare funzionalit\u00e0 per ruolo: {0}
 message.delete.success=Eliminazione ruolo riuscita.
-message.delete.failure=Impossibile eliminare il ruolo.
+message.delete.failure=Impossibile eliminare ruolo.
 message.edit-success=Aggiornamento ruolo riuscito.
-message.edit-failure=Impossibile aggiornare il ruolo.
+message.edit-failure=Impossibile aggiornare ruolo.
 message.create-success=Creazione ruolo riuscita.
-message.create-failure=Impossibile creare il ruolo.
+message.create-failure=Impossibile creare ruolo.
 
 label.roles=Ruoli
 label.select-all=Seleziona tutto
@@ -23,5 +23,5 @@ label.create-another=Crea uno, poi un altro
 label.cancel=Annulla
 label.save=Salva
 
-label.confirm-delete-title=Conferma eliminazione ruolo
-label.confirm-delete-message=Eliminare questo ruolo?
+label.confirm-delete-title=Elimina conferma ruolo
+label.confirm-delete-message=Procedere con l'eliminazione di questo ruolo?
