--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-email-mappings.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-email-mappings.get_it.properties
@@ -2,12 +2,12 @@ label.email-mappings=Mapping e-mail
 label.add=Aggiungi
 label.delete=Elimina
 label.to=in
-label.map=Esegui mapping
+label.map=Mappa
 label.select-email=Seleziona propriet\u00e0 e-mail
 
-message.loadFailure=Impossibile caricare i mapping e-mail
-message.saveFailure=Impossibile salvare i mapping e-mail
+message.loadFailure=Impossibile caricare mapping e-mail
+message.saveFailure=Impossibile salvare mapping e-mail
 message.saveSuccess=Nuovi mapping salvati
 message.delete.mapping.title=Eliminare mapping?
-message.delete.mapping.text=Eliminare il mapping '{0}'?
+message.delete.mapping.text=Procedere con l''eliminazione del mapping ''{0}''?
 message.deleted=Eliminazione mapping riuscita
