--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-events.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-events.get_it.properties
@@ -4,17 +4,17 @@ label.editevent.title=Modifica evento
 label.general=Generale
 label.label=Etichetta
 label.type=Tipo
-label.required=Campi richiesti
+label.required=Campi obbligatori
 
 button.newevent=Nuovo evento
 
 message.confirm.removeevent.title=Rimuovi evento
-message.confirm.removeevent.text=Rimuovere ''{0}''?
+message.confirm.removeevent.text=Procedere con la rimozione di ''{0}''?
 message.removeevent.success=Rimozione evento riuscita.
-message.removeevent.failure=Impossibile rimuovere l'evento.
-message.saveevent.saving=Salvataggio evento in corso...
-message.loadevent.failure=Impossibile caricare i dati dell'evento.
+message.removeevent.failure=Impossibile rimuovere evento.
+message.saveevent.saving=Salvataggio evento...
+message.loadevent.failure=Impossibile caricare dati per l'evento.
 message.loadevents.failure=Impossibile caricare gli eventi.
 message.loadevents.loading=Caricamento eventi...
-message.empty=Nessun evento esistente.
-message.error=Impossibile caricare gli eventi.
+message.empty=Nessun evento presente.
+message.error=Impossibile caricare eventi.
