--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-references.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-references.get_it.properties
@@ -1,4 +1,4 @@
-label.view-references-title=Relazioni dei collegamenti
+label.view-references-title=Collega relazioni
 label.title.parentchild={0}, {1}
 label.create-references-title=Nuova relazione
 label.edit-references-title=Modifica relazione
@@ -6,19 +6,19 @@ label.general=Generale
 label.type=Tipo
 label.bidirectional=Bidirezionale
 label.label=Etichetta
-label.parentchild=Padre/Figlio
+label.parentchild=Principale/Secondario
 label.source=Origine
 label.target=Destinazione
 
 button.newreference=Nuova relazione
 
-message.confirm.removereference.title=Rimuovi relazione
-message.confirm.removereference.text=Rimuovere ''{0}''?
-message.confirm.removereference.text.parentchild=Rimuovere ''{0}, {1}''?
+message.confirm.removereference.title=Rimuovere relazione
+message.confirm.removereference.text=Procedere con la rimozione di ''{0}''?
+message.confirm.removereference.text.parentchild=Procedere con la rimozione di ''{0}, {1}''?
 message.removereference-success=Rimozione riferimento riuscita.
-message.removereference-failure=Impossibile rimuovere la relazione.
-message.savingReference=Salvataggio relazione in corso...
-message.loadreference-failure=Impossibile caricare i dati della relazione.
-message.loading=Caricamento relazioni in corso...
-message.empty=Nessuna relazione esistente.
-message.error=Impossibile caricare le relazioni.
+message.removereference-failure=Impossibile rimuovere relazione.
+message.savingReference=Salvataggio relazione...
+message.loadreference-failure=Impossibile caricare dati per la relazione.
+message.loading=Caricamento relazioni...
+message.empty=Nessuna relazione presente.
+message.error=Impossibile caricare relazioni.
