--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-user-rights.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-user-rights.get_it.properties
@@ -1,5 +1,5 @@
 label.user-rights=Diritti utente
-label.userid=Id utente
+label.userid=ID utente
 label.roles=Ruoli
 label.groups=Gruppi
 label.name=Nome
