--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/fileplan.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/fileplan.get_it.properties
@@ -3,5 +3,5 @@ header.fileplan=Piano file
 
 ## Filters
 label.transfers=Trasferimenti
-label.holds=Esenzioni
+label.holds=Sospensioni
 label.unfiledRecords=Record non archiviati
