--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/report.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/report.get_it.properties
@@ -4,7 +4,7 @@ label.parentPath=Percorso
 label.recordSeriesIdentifier=Identificatore serie di record
 label.recordCategoryIdentifier=Identificatore categoria record
 label.recordFolderIdentifier=Identificatore cartella di record
-label.vitalRecordIndicator=Indicatore record essenziale
+label.vitalRecordIndicator=Indicatore record fondamentale
 label.dispositionAuthority=Autorit\u00e0 di disposizione
 label.noDispositionAuthority=Nessuna
 label.dispositionSchedule=Pianificazione della disposizione
