--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_it.properties
@@ -1,5 +1,4 @@
-﻿header.action=Esegui azione:
-button.freeze=Blocca...
+header.action=Esegui azione:
 button.reject=Respingi...
 button.requestInfo=Richiedi informazioni...
 button.select-folder=Seleziona...
@@ -22,20 +21,20 @@ form.control.date-picker.display.date.format=GG/MM/AAAA
 form.control.date-picker.entry.time.format=HH:mm
 form.control.date-picker.display.time.format=HH:MM (24 ore)
 
-record.folder.path.title=Fare clic per visualizzare la guida per il campo del percorso della cartella record.
-record.folder.path.help=<p>Sono consentite le seguenti sostituzioni:</p>\
+record.folder.path.title=Fare clic per visualizzare la guida per il campo del percorso della cartella di record.
+record.folder.path.help=<p>Sono permesse le seguenti sostituzioni:</p>\
    <p></p>\
-   <p>data.giorno.breve = Dom</p>\
-   <p>data.giorno = Dom</p>\
-   <p>data.giorno.lungo = Domenica</p>\
-   <p>data.giorno.numero = 7 (1-7)</p>\
-   <p>data.giorno.anno = 216 (001-365)</p>\
-   <p>data.mese.breve = Ago</p>\
-   <p>data.mese = Ago</p>\
-   <p>data.mese.lungo = Agosto</p>\
-   <p>data.mese.numero = 08 (01-12)</p>\
-   <p>data.anno.breve = 13</p>\
-   <p>data.anno = 13</p>\
-   <p>data.anno.lungo = 2013</p>\
-   <p>data.anno.settimana = 31 (01-52)</p>\
+   <p>date.day.short = Dom</p>\
+   <p>date.day = Dom</p>\
+   <p>date.day.long = Domenica</p>\
+   <p>date.day.number = 7 (1-7)</p>\
+   <p>date.day.year = 216 (001-365)</p>\
+   <p>date.month.short = Ago</p>\
+   <p>date.month = Ago</p>\
+   <p>date.month.long = Agosto</p>\
+   <p>date.month.number = 08 (01-12)</p>\
+   <p>date.year.short = 13</p>\
+   <p>date.year = 13</p>\
+   <p>date.year.long = 2013</p>\
+   <p>date.year.week = 31 (01-52)</p>\
    <p>node.cm:title = <title value of the node></p>\
