--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-condition.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-condition.get_it.properties
@@ -1,12 +1,12 @@
 header.condition.if=Se tutti i criteri sono soddisfatti:
 header.condition.unless=A meno che tutti i criteri siano soddisfatti:
-menu.item.show-more=Mostra altro...
-label.noRendererForType=Errore: Nessun renderer per il tipo ''{0}''
+menu.item.show-more=Mostra altre...
+label.noRendererForType=Errore: nessun renderer per il tipo ''{0}''
 label.is=\u00e8
 label.sizeUnit=byte
 label.transientProperty={0} in {1}
-message.getPropertiesFailure=Impossibile caricare le propriet\u00e0
-message.getTagFailure=Impossibile caricare il tag
+message.getPropertiesFailure=Impossibile caricare propriet\u00e0
+message.getTagFailure=Impossibile caricare tag
 
 ## Format used for date entry in date picker, 'entry' format is used by date parsing code,
 ## 'display' format is shown to the user under date entry field
