--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-details.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-details.get_it.properties
@@ -7,8 +7,8 @@ header.when=Quando
 header.if=Se
 header.unless=A meno che
 header.action=Esegui azione
-message.getRuleFailure=Impossibile caricare le informazioni sulle regole
-message.deletingRule=Eliminazione della regola in corso...   
+message.getRuleFailure=Impossibile caricare informazioni su regola
+message.deletingRule=Eliminazione regola...   
 message.confirm.delete.title=Elimina regola
-message.confirm.delete=Eliminare la regola?
-message.loading=Caricamento del piano file...
+message.confirm.delete=Procedere con l'eliminazione della regola?
+message.loading=Caricamento piano file...
