--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-edit.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-edit.get_it.properties
@@ -1,4 +1,4 @@
-form.required.fields=Campi richiesti
+form.required.fields=Campi obbligatori
 header.newRule=Nuova regola
 header.editRule=Modifica regola
 header.general=Generale
@@ -17,8 +17,8 @@ header.when=Quando
 header.if=Se
 header.unless=A meno che
 header.action=Esegui azione
-message.creating=Creazione della regola in corso...
-message.updating=Aggiornamento della regola in corso...
-message.persist-failure=Impossibile rendere permanente la regola
-message.createAnotherRule=Regola creata 
-message.loading=Caricamento del piano file...
+message.creating=Creazione regola...
+message.updating=Aggiornamento regola...
+message.persist-failure=Impossibile salvare regola in modo permanente
+message.createAnotherRule=Creazione regola riuscita 
+message.loading=Caricamento piano file...
