--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/html-upload.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/html-upload.get_it.properties
@@ -18,12 +18,12 @@ label.minorVersion=Versione minore
 label.majorVersion=Versione maggiore
 label.comments=Commenti
 
-message.uploading=Caricamento del documento in corso...
-message.success=Documento caricato
-message.failure=Impossibile caricare il documento
+message.uploading=Caricamento del documento...
+message.success=Caricamento documento riuscito
+message.failure=Impossibile caricare documento
 
 label.contentType=Tipo di contenuto
 type.cm_content=Contenuto
 
 label.recordType=Tipi di record
-recordType.default=Predefinito
+recordType.default=Impostazione predefinita
