--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/copy-move-link-file-to.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/copy-move-link-file-to.get_it.properties
@@ -1,42 +1,46 @@
 ## Common
-header=Scegli la cartella di destinazione
+header=Scegli cartella di destinazione
 
 ## Copy To
 copy.node.root=Piano file
+copy.node.unfiledroot=Record non archiviati
 copy.title.single=Copia {0} in...
 copy.title.multi=Copia {0} elementi in...
 copy.button=Copia
-copy.message.no-files=\u00c8 necessario fornire almeno un file
-copy.message.please-wait=Copia dei file in corso...
+copy.message.no-files=Almeno un file deve essere specificato
+copy.message.please-wait=Copia dei file...
 copy.message.success={0} elementi copiati
 copy.message.failure=Impossibile copiare gli elementi
 
 ## Move To
 move.node.root=Piano file
+move.node.unfiledroot=Record non archiviati
 move.title.single=Sposta {0} in...
 move.title.multi=Sposta {0} elementi in...
 move.button=Sposta
-move.message.no-files=\u00c8 necessario fornire almeno un file
-move.message.please-wait=Spostamento dei file in corso...
-move.message.success={0} elementi spostati
+move.message.no-files=Almeno un file deve essere specificato
+move.message.please-wait=Spostamento file...
+move.message.success=Spostamento {0} elementi riuscito
 move.message.failure=Impossibile spostare gli elementi
 
 ## Link To
 link.node.root=Piano file
+link.node.unfiledroot=Record non archiviati
 link.title.single=Collega {0} a...
 link.title.multi=Collega {0} elementi a...
 link.button=Collega
-link.message.no-files=\u00c8 necessario fornire almeno un file
-link.message.please-wait=Collegamento file in corso...
-link.message.success={0} elementi collegati
-link.message.failure=Impossibile collegare gli elementi
+link.message.no-files=Almeno un file deve essere specificato
+link.message.please-wait=Collegamento file...
+link.message.success=Collegamento {0} elementi riuscito
+link.message.failure=Impossibile collegare elementi
 
 ## File To
 file.node.root=Piano file
-file.title.single=Archivia {0} in...
-file.title.multi=Archivia {0} elementi in...
+file.node.unfiledroot=Record non archiviati
+file.title.single=Archivia {0} su...
+file.title.multi=Archivia {0} elementi su...
 file.button=File
-file.message.no-files=\u00c8 necessario fornire almeno un file
-file.message.please-wait=Archiviazione dei file in corso...
-file.message.success={0} elementi archiviati
+file.message.no-files=Almeno un file deve essere specificato
+file.message.please-wait=Archiviazione file...
+file.message.success=Archiviazione {0} elementi riuscita
 file.message.failure=Impossibile archiviare gli elementi
