--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/export.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/export.get_it.properties
@@ -1,4 +1,4 @@
 header=Esporta
-label.transferFormat=Selezionare il formato file per l'esportazione:
-label.acp=Alfresco Content Package (ACP)
+label.transferFormat=Seleziona formato file da esportare:
+label.acp=Pacchetto di contenuti Alfresco
 label.zip=ZIP
