--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/file-report.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/file-report.get_it.properties
@@ -1,9 +1,7 @@
-header=Selezionare la cartella di record di destinazione
-
+header=Seleziona destinazione della cartella di record
 node.root=Piano file
-title.single=Archivia report di trasferimento {0} in...
+title.single=Archivia report su...
 button.file=Archivia report
-message.no-files=\u00c8 necessario fornire almeno un file
-message.please-wait=Archiviazione report di trasferimento in corso...
-message.success=Report di trasferimento archiviato come {0} 
-message.failure=Impossibile completare l'operazione di archiviazione
+message.no-files=Almeno un file deve essere specificato
+message.please-wait=Archiviazione report...
+label.unfiled-records=Archivia report su "Record non archiviati"
