--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/events.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/events.get_it.properties
@@ -2,19 +2,19 @@ events.heading=Eventi
 title.completedEvents=Completato
 title.incompleteEvents=Incompleto
 title.completeEvent=Completa evento
-message.completingEvent=Completamento evento in corso
+message.completingEvent=Completamento evento...
 message.completeEventFailure=Impossibile completare l'evento
-message.revokingEvent=Revoca dell'evento in corso
+message.revokingEvent=Revoca evento
 message.revokeEventFailure=Impossibile revocare l'evento
 label.automatic=Automatico
 label.manual=Manuale
 label.completedBy=Completato da
-label.completedAt=Completato il
+label.completedAt=Completato su
 label.asOf=In data
-label.noDispositionSchedule=Il ciclo di vita della disposizione non esiste.
-label.noEventsInDispositionSchedule=Non sono presenti eventi per il passaggio ''{0}''.
-label.completeDispositionSchedule=Ciclo di vita della disposizione completato.
-label.dispositionScheduleAppliedToFolder=Pianificazione della disposizione applicata alla cartella di record padre con in data: {0}.
-label.linkToFoldersDispositionSchedule=Visualizza eventi cartella padre
-label.loadFailure=Impossibile caricare gli eventi
+label.noDispositionSchedule=Ciclo di vita disposizione non presente.
+label.noEventsInDispositionSchedule=Non sono presenti eventi per il passo ''{0}''.
+label.completeDispositionSchedule=Ciclo di vita disposizione completato.
+label.dispositionScheduleAppliedToFolder=Pianificazione della disposizione applicata alla cartella di record superiore, in data: {0}.
+label.linkToFoldersDispositionSchedule=Visualizza eventi cartella superiore
+label.loadFailure=Impossibile caricare eventi
 button.completeEvent=Completa evento
