--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_it.properties
@@ -1,4 +1,4 @@
-﻿label.header-title=Controllo
+label.header-title=Audit
 
 label.yes=S\u00ec
 label.no=No
@@ -6,57 +6,57 @@ label.record=Record
 label.button-cancel=Annulla
 button.view-record=Visualizza record
 
-label.clear-log-title=Cancellare il registro di controllo?
-label.clear-log-confirmation=Cancellare il registro di controllo?
-label.clearing-log-message=Attendere. Cancellazione del registro di controllo in corso.
-label.cleared-log-message=Registro di controllo cancellato.
-message.clear-log-fail = Errore nella cancellazione del registro di controllo.
+label.clear-log-title=Cancella log di audit?
+label.clear-log-confirmation=Procedere con la cancellazione del log di audit?
+label.clearing-log-message=Attendere. Cancellazione del log di audit...
+label.cleared-log-message=Log di audit cancellato.
+message.clear-log-fail = Errore durante la cancellazione del log di audit.
 
-label.stopped-at=Registro di controllo interrotto alle {0}
-label.stop-log-title=Interrompere registro di controllo?
-label.stop-log-confirmation=Interrompere registro di controllo?
-label.stopping-log-message=Attendere. Interruzione del registro di controllo in corso.
-label.stopped-log-message=Registro di controllo interrotto.
-message.stop-log-fail = Errore nell'interruzione del registro di controllo.
+label.stopped-at=Log di audit interrotto alle {0}
+label.stop-log-title=Interrompi log di audit?
+label.stop-log-confirmation=Procedere con l'interruzione del log di audit?
+label.stopping-log-message=Attendere. Interruzione del log di audit...
+label.stopped-log-message=Log di audit interrotto.
+message.stop-log-fail = Errore durante l'interruzione del log di audit.
 
-label.started-at=Registro di controllo avviato alle {0}
-label.start-log-title=Avviare il registro di controllo?
-label.start-log-confirmation=Avviare il registro di controllo?
-label.starting-log-message=Attendere. Avvio del registro di controllo in corso.
-label.started-log-message=Registro di controllo avviato.
-message.start-log-fail = Errore nell'avvio del registro di controllo.
+label.started-at=Log di audit avviato alle {0}
+label.start-log-title=Avvia log di audit?
+label.start-log-confirmation=Procedere con l'avvio del log di audit?
+label.starting-log-message=Attendere. Avvio del log di audit...
+label.started-log-message=Log di audit avviato.
+message.start-log-fail = Errore durante l'avvio del log di audit.
 message.select-from-date=Seleziona dalla data
 message.select-to-date=Seleziona alla data
 
 label.button-clear=Cancella
 label.button-stop=Interrompi
 label.button-start=Avvia
-label.button-view-log=Visualizza registro completo
+label.button-view-log=Visualizza log completo
 label.button-specify=Specifica
 label.button-export=Esporta
 label.button-file-record=Archivia come record
 label.button-apply=Applica
 label.button-details=Dettagli
 
-label.filed-log-message=Il registro di controllo \u00e8 stato archiviato come record.
-message.filing-log-fail=Archiviazione del controllo come record non riuscita.
+label.filed-log-message=Il log di audit \u00e8 stato archiviato come record.
+message.filing-log-fail=Archiviazione dell'audit come record non riuscita.
 label.file-record=Archivia record
 
 label.timestamp=Data e ora
 label.user=Utente
 label.role=Ruolo
 label.event=Evento
-label.filter-log-title=Filtrare registro?
-label.filtering-log-message=Filtraggio registro in corso
+label.filter-log-title=Filtrare log?
+label.filtering-log-message=Filtraggio log...
 label.default-filter=Tutti gli utenti
-label.pagination=Visualizzazione delle ultime {0} voci nel registro
-label.show-log-for=Mostra registro per:
+label.pagination=Visualizzazione delle ultime {0} voci nel log
+label.show-log-for=Mostra log per:
 label.all-users=Tutti gli utenti
 label.remove-filter=Rimuovi filtro
-label.default-message=Fare clic su 'Applica' per visualizzare il registro di controllo
+label.default-message=Fare clic su 'Applica' per visualizzare il log di audit
 
 node.root=Piano file
-title.single=Seleziona posizione del record di controllo
+title.single=Seleziona posizione record di audit
 
 label.header-users=Utenti
 label.header-entries=Numero di voci
@@ -65,7 +65,7 @@ label.header-to=A
 label.header-event=Evento
 label.header-property=Propriet\u00e0
 
-label.dialog-title=Dettagli di {0} evento
+label.dialog-title=Dettagli di evento {0}
 label.property=Propriet\u00e0
 label.previous-value=Valore precedente
 label.new-value=Nuovo valore
