--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_it.properties
@@ -5,7 +5,7 @@ label.list-title=Oggetto
 label.custom-metadata=Metadati personalizzati
 label.selection-list=Elenco di selezione
 label.label=Etichetta
-label.use-list=Usa elenco di selezione
+label.use-list=Utilizza elenco di selezione
 label.mandatory=Obbligatorio
 
 label.datatype.unknown=Sconosciuto
@@ -13,16 +13,16 @@ label.datatype.text=Testo
 label.datatype.boolean=Booleano
 label.datatype.date=Data
 
-message.getpropertiesfail=Impossibile recuperare le definizioni delle propriet\u00e0 personalizzate
-message.noproperties=Nessuna propriet\u00e0 personalizzata definita.
-message.create-success=Aggiunta di nuova propriet\u00e0 personalizzata riuscita.
+message.getpropertiesfail=Impossibile recuperare definizioni propriet\u00e0 personalizzata.
+message.noproperties=Propriet\u00e0 personalizzate definite non presenti.
+message.create-success=Aggiunta propriet\u00e0 personalizzata non riuscita.
 message.create-failure=Impossibile aggiungere nuova propriet\u00e0 personalizzata: {0}
 message.edit-success=Salvataggio propriet\u00e0 personalizzata riuscito.
-message.edit-failure=Impossibile salvare la propriet\u00e0 personalizzata: {0}
+message.edit-failure=Impossibile salvare propriet\u00e0 personalizzata: {0}
 message.delete.title=Elimina propriet\u00e0 personalizzata
-message.delete.text=Eliminare: {0}?
+message.delete.text=Procedere con l''eliminazione: {0}?
 message.delete-success=Eliminazione propriet\u00e0 personalizzata riuscita.
-message.delete-failure=Impossibile eliminare la propriet\u00e0 personalizzata: {0}
+message.delete-failure=Impossibile eliminare propriet\u00e0 personalizzata: {0}
 
 mandatory.true=Vero
 mandatory.false=Falso
