--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-list-of-values.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-list-of-values.get_it.properties
@@ -1,4 +1,4 @@
-﻿label.view-listofvalues-title=Elenchi
+label.view-listofvalues-title=Elenchi
 label.edit-listofvalue-title=Modifica elenco: {0}
 label.values=Valori
 label.access=Accesso
@@ -10,28 +10,28 @@ panel.addaccess.header=Aggiungi accesso
 button.newlist=Nuovo elenco
 
 message.confirm.deletelist.title=Rimuovi elenco
-message.confirm.deletelist.text=Rimuovere ''{0}''?
+message.confirm.deletelist.text=Procedere con la rimozione di ''{0}''?
 message.deletelist.success=Rimozione elenco riuscita.
-message.deletelist.failure=Impossibile rimuovere l'elenco.
-message.loading.lists=Caricamento elenco di valori in corso...
-message.loading.values=Caricamento valori in corso...
-message.loading.access=Caricamento accesso in corso...
+message.deletelist.failure=Rimozione elenco non riuscita.
+message.loading.lists=Caricamento elenco di valori...
+message.loading.values=Caricamento valori...
+message.loading.access=Caricamento accesso...
 message.empty.lists=Fare clic su 'Nuovo elenco' per creare un elenco.
 message.empty.values=Inserire un valore nel campo di testo e fare clic su 'Aggiungi'.
 message.empty.access=Fare clic su 'Aggiungi' per fornire l'accesso al valore per un gruppo o utente.
-message.error=Impossibile caricare i dati.
-message.addvalue.failure=Impossibile aggiungere il valore ''{0}''
+message.error=Impossibile caricare dati.
+message.addvalue.failure=Impossibile aggiungere valore ''{0}''
 message.addlist.failure.title=Aggiunta elenco non riuscita
 message.addlist.failure.text=Impossibile aggiungere elenco: {0}
 message.renamelist.failure.title=Ridenominazione elenco non riuscita
 message.renamelist.failure.text=Impossibile rinominare elenco: {0}
 message.confirm.removevalue.title=Rimuovi valore
-message.confirm.removevalue.text=Rimuovere ''{0}''?
+message.confirm.removevalue.text=Procedere con la rimozione di ''{0}''?
 message.deletevalue.failure=Eliminazione valore non riuscita.
 message.confirm.removeaccess.title=Rimuovi autorit\u00e0 di accesso
-message.confirm.removeaccess.text=Rimuovere ''{0}''?
-message.removeaccess.failure=Impossibile rimuovere l'autorit\u00e0 di accesso.
-message.addaccess.failure=Impossibile aggiungere il valore.
+message.confirm.removeaccess.text=Procedere con la rimozione di ''{0}''?
+message.removeaccess.failure=Impossibile rimuovere autorit\u00e0 di accesso.
+message.addaccess.failure=Impossibile aggiungere valore.
 
 table.header.actions=Azioni
 table.header.icon=Icona
