--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-users-and-groups.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-users-and-groups.get_it.properties
@@ -6,24 +6,24 @@ label.remove-group=Rimuovi
 label.add-user=Aggiungi
 label.remove-user=Rimuovi
 
-message.get-roles-failure=Impossibile recuperare i ruoli utente: {0}
+message.get-roles-failure=Impossibile recuperare ruoli utente: {0}
 
 message.load-peopleFinder-failure=Impossibile caricare il componente 'Ricerca persona'
 message.load-groupFinder-failure=Impossibile caricare il componente 'Ricerca gruppo'
-message.adduser-success=Aggiunta utente ''{0}'' riuscita.
-message.adduser-failure=Impossibile aggiungere l'utente ''{0}''.
-message.addgroup-success=Aggiunta gruppo ''{0}'' riuscita.
-message.addgroup-failure=Impossibile aggiungere il gruppo ''{0}''.
+message.adduser-success=Utente ''{0}'' aggiunto.
+message.adduser-failure=Impossibile aggiungere utente ''{0}''.
+message.addgroup-success=Gruppo ''{0}''aggiunto.
+message.addgroup-failure=Impossibile aggiungere gruppo ''{0}''.
 
-message.confirm.removeuser=Rimuovere ''{0}'' dal ruolo?
-message.confirm.removeuser.title=Rimuovi utente dal ruolo
+message.confirm.removeuser=Procedere con la rimozione di ''{0}'' dal ruolo?
+message.confirm.removeuser.title=Rimuovi utente da ruolo
 message.removeuser-success=Rimozione utente ''{0}'' riuscita.
-message.removeuser-failure=Impossibile rimuovere l'utente ''{0}''.
+message.removeuser-failure=Impossibile rimuovere utente ''{0}''.
 
-message.confirm.removegroup=Rimuovere ''{0}'' dal ruolo?
-message.confirm.removegroup.title=Rimuovi gruppo dal ruolo
+message.confirm.removegroup=Procedere con la rimozione di ''{0}'' dal ruolo?
+message.confirm.removegroup.title=Rimuovi gruppo da ruolo
 message.removegroup-success=Rimozione gruppo ''{0}'' riuscita.
-message.removegroup-failure=Impossibile rimuovere il gruppo ''{0}''.
+message.removegroup-failure=Impossibile rimuovere gruppo ''{0}''.
 
 panel.adduser.header=Aggiungi utente
 panel.addgroup.header=Aggiungi gruppo
