--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/dashlets/datasets.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/dashlets/datasets.get_it.properties
@@ -3,8 +3,8 @@ dataSet.label=Set di dati
 dataSet.select.title=Selezionare un set di dati e fare clic su Importa per caricare i dati di prova.
 dataSet.select.label=Seleziona un set di dati
 dataSet.importButton.text=Importa
-dataSet.message.importing=Attendere. Importazione dei dati di prova della gestione dei record in corso...
-dataSet.message.import-ok=Il set di dati selezionato \u00e8 stato importato con successo.
-dataSet.message.import-fail=Impossibile importare i dati di prova nel sito di gestione dei record.
-dataset.not-rm-admin=Non si dispone del livello di autorizzazione necessario per l'importazione del set di dati.
-dataset.not-rm-site=Questa dashlet pu\u00f2 essere utilizzata solo per i siti di gestione dei record.
+dataSet.message.importing=Importazione dati di prova della gestione dei record. Attendere...
+dataSet.message.import-ok=Importazione set di dati selezionato riuscita.
+dataSet.message.import-fail=Impossibile importare dati di prova nel sito di gestione dei record.
+dataset.not-rm-admin=Non si dispone del livello di autorizzazione necessario per importare un set di dati.
+dataset.not-rm-site=Questo dashlet pu\u00f2 essere utilizzato solo per i siti RM.
