--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/savedsearch.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/savedsearch.get_it.properties
@@ -1,20 +1,20 @@
-﻿## Title
+## Title
 header.savedsearch=Ricerche salvate
 
-rm.savedsearch.vitalRecordsName=Record essenziali da revisionare
+rm.savedsearch.vitalRecordsName=Record fondamentali da revisionare
 rm.savedsearch.vitalRecordsDesc=Tutti i record attualmente da revisionare.
 
 rm.savedsearch.incompleteRecordsName=Record incompleti
 rm.savedsearch.incompleteRecordsDesc=Tutti i record incompleti.
 
-rm.savedsearch.cutoffRecordsName=Record idonei al taglio
-rm.savedsearch.cutoffRecordsDesc=Tutti i record attualmente idonei al taglio.
+rm.savedsearch.cutoffRecordsName=Record e cartelle di record idonei per il cut off
+rm.savedsearch.cutoffRecordsDesc=Tutti i record e le cartelle di record attualmente idonei per il cut off.
 
-rm.savedsearch.transferRecordsName=Record idonei al trasferimento
-rm.savedsearch.transferRecordsDesc=Tutti i record attualmente idonei al trasferimento.
+rm.savedsearch.transferRecordsName=Record e cartelle di record idonei per il trasferimento
+rm.savedsearch.transferRecordsDesc=Tutti i record e le cartelle di record attualmente idonei per il trasferimento.
 
-rm.savedsearch.destructionRecordsName=Record idonei all'eliminazione
-rm.savedsearch.destructionRecordsDesc=Tutti i record attualmente idonei all'eliminazione.
+rm.savedsearch.destructionRecordsName=Record e cartelle di record idonei per l'eliminazione permanente
+rm.savedsearch.destructionRecordsDesc=Tutti i record e le cartelle di record attualmente idonei per l'eliminazione permanente.
 
-rm.savedsearch.frozenRecordsName=Record bloccati
-rm.savedsearch.frozenRecordsDesc=Tutti i record bloccati.
+rm.savedsearch.frozenRecordsName=Record e cartelle di record in sospeso
+rm.savedsearch.frozenRecordsDesc=Tutti i record e le cartelle di record in sospeso.
