--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition-edit.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition-edit.get_it.properties
@@ -4,16 +4,17 @@ header.events=Eventi
 header.event=Evento
 header.completion=Completamento evento
 
-label.required.fields=Campi richiesti
+label.required.fields=Campi obbligatori
 label.title.simple={0}
 label.title.noTime={0} {1}
 label.title.complex={0} dopo {1} {2}
 label.title.new=Nuovo passaggio
+label.ghostondestroy=Gestisci i metadati del record dopo l'eliminazione
 label.transferTo=Trasferisci a
 label.after=Dopo un periodo di
-label.from=da
-label.when=Quando l'evento si verifica
-label.description=Descrizione del passaggio
+label.from=Da
+label.when=All'occorrenza dell'evento
+label.description=Descrizione passaggio
 label.select.location=Seleziona posizione...
 
 icon.editaction=Modifica
@@ -25,21 +26,21 @@ label.and=e
 label.automatic.true=Automatico
 label.automatic.false=Manuale
 
-relation.option.or=Qualunque evento si verifichi prima
-relation.option.and=Quando tutti gli eventi si sono verificati
+relation.option.or=Ogni evento precedente
+relation.option.and=Al verificarsi di tutti gli eventi
 
 button.addevent=Aggiungi evento
 button.createevent=Crea evento
 button.addaction=Aggiungi passaggio
 button.createaction=Aggiungi passaggio
 
-message.getActionFailure=Impossibile ottenere la pianificazione della disposizione
-message.savingAction=Salvataggio passaggio in corso
+message.getActionFailure=Impossibile ottenere pianificazione della disposizione
+message.savingAction=Salvataggio passaggio
 message.saveActionFailure=Impossibile salvare il passaggio
 title.deleteAction=Elimina
-label.confirmDeleteAction=Eliminare il passaggio?
-message.deletingAction=Eliminazione passaggio in corso
-message.deleteActionSuccess=Eliminazione del passaggio riuscita
-message.deleteActionFailure=Impossibile eliminare il passaggio
-message.loadingSteps=Caricamento passaggi in corso...
-message.noSteps=Nessun passaggio esistente. Fare clic su Aggiungi passaggio per crearne uno.
+label.confirmDeleteAction=Procedere con l'eliminazione del passaggio?
+message.deletingAction=Eliminazione passaggio...
+message.deleteActionSuccess=Eliminazione passaggio riuscita
+message.deleteActionFailure=Impossibile eliminare passaggio
+message.loadingSteps=Caricamento passaggi...
+message.noSteps=Nessun passaggio esistente Fare clic su Aggiungi passaggio per crearne uno.
