--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition.get_it.properties
@@ -1,14 +1,14 @@
 disposition-schedule.heading=Pianificazione della disposizione
 
 title.properties=Generale
-title.actions=Passaggi della disposizione
+title.actions=Disposizione passaggi
 
 label.dispositionAuthority=Autorit\u00e0 di disposizione
 label.dispositionInstructions=Istruzioni di disposizione
 label.appliedTo=Applicato a
 label.appliedTo.record=Record
 label.appliedTo.folder=Cartella
-label.noactions=La pianificazione della disposizione non presenta azioni
+label.noactions=The Pianificazione della disposizione non contiene azioni
 label.title.simple={0}
 label.title.noTime={0} {1}
 label.title.complex={0} dopo {1} {2}
@@ -18,5 +18,5 @@ link.description=Visualizza descrizione
 
 button.addevent=Aggiungi evento
 
-title.noDispositionSchedule=Nessuna pianificazione di disposizione trovata
+title.noDispositionSchedule=Nessuna pianificazione della disposizione trovata
 button.createDispositionSchedule=Crea pianificazione della disposizione
