--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/references/new-reference.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/references/new-reference.get_it.properties
@@ -3,8 +3,8 @@ label.select = Seleziona
 label.record-link = Collega a record
 label.record-rel = Relazione
 label.name = Nome riferimento
-label.required = Campo richiesto
+label.required = Campo obbligatorio
 label.create=Crea
 label.cancel=Annulla
 label.fileplan= Piano file
-message.createfail=Impossibile creare un nuovo riferimento
+message.createfail=Impossibile creare nuovo riferimento
