--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rules-header.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rules-header.get_it.properties
@@ -8,8 +8,8 @@ message.inheritToggle-success-off=Le regole ereditate sono disabilitate
 menu.run=Esegui regole...
 menu.option.run=Esegui regole per questa cartella
 menu.option.run-recursive=Esegui regole per questa cartella e le relative sottocartelle
-message.getRules-failure=Impossibile caricare le regole
-message.runningRules=Esecuzione delle regole in corso...
-message.runRules-success=Regole eseguite
-message.runRules-failure=Impossibile eseguire le regole
+message.getRules-failure=Impossibile caricare regole
+message.runningRules=Esecuzione regole...
+message.runRules-success=Esecuzione regole riuscita
+message.runRules-failure=Impossibile eseguire regole
 filePlan.label = Piano file
