--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/dnd-upload.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/dnd-upload.get_it.properties
@@ -1,21 +1,21 @@
-﻿header.singleUpload=Carica file
+header.singleUpload=Carica file
 header.multiUpload.singleFile=Carica file in {0}
 #header.multiUpload=Upload Files to {0}
 header.singleUpdate=Aggiorna file
 header.error=Errore
 
-label.noFiles=Caricamento file nella memoria; attendere...
+label.noFiles=Caricamento file nella memoria. Attendere...
 label.documents=Documenti
 label.success=Operazione riuscita
 label.failure=Operazione non riuscita: {0}
 label.failure.413=Operazione non riuscita: quota superata
 label.failure.409=Operazione non riuscita: violazione dimensioni del contenuto
-label.failure.fileTooBig=Errore: il file \u00e8 maggiore di 25 MB
+label.failure.fileTooBig=Operazione non riuscita: il file \u00e8 maggiore di 25 MB
 label.uploadStatus={0} di {1} file completati
 label.uploadStatus.withFailures={0} di {1} file completati ({2} non completati)
 label.aggregateUploadStatus=Caricamento di {0} file ({1})
 message.cancelStatus=Caricamenti annullati; {0} file caricati
-message.zeroByteFileSelected=Impossibile caricare il file {0} perch\u00e9 presenta le seguenti dimensioni: 0 byte.
+message.zeroByteFileSelected=Impossibile caricare il file {0} poich\u00e9 presenta dimensioni pari a 0 byte.
 message.zeroByteFiles=Impossibile caricare i seguenti elementi poich\u00e9 sono cartelle o la loro dimensione \u00e8 pari a 0 byte: {0}
 message.illegalCharacters=Il file {0} contiene caratteri non validi per alcuni sistemi operativi.
 message.maxFileFileSizeExceeded=Il file {0} \u00e8 troppo grande ({1}) rispetto al valore massimo consentito {2}.
@@ -32,12 +32,12 @@ label.comments=Commenti
 
 type.cm_content=Contenuto
 
-inmemory.uploadsize.exceeded=Il browser non supporta caricamenti mediante trascinamento della selezione quando le dimensioni totali dei file rilasciati superano {0}
+inmemory.uploadsize.exceeded=Il browser non supporta caricamenti mediante trascinamento della selezione quando la dimensione totale dei file rilasciati supera {0}
 
 
 # RM Specific properties
 header.multiUpload=Archivia record
-button.selectFiles=Selezionare i record da archiviare
+button.selectFiles=Seleziona record da archiviare
 
 header.import=Importa
-button.selectImportFile=Selezionare i record da importare
+button.selectImportFile=Seleziona record da importare
