--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/flash-upload.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/flash-upload.get_it.properties
@@ -1,25 +1,25 @@
 header.singleUpload=Carica file
-header.multiUpload=Carica pi\u00f9 file
+header.multiUpload=Carica file
 header.singleUpdate=Aggiorna file
 header.singleImport=Importa
 
 section.recordType=Scegli tipo di record
-section.file=Scegli i file
+section.file=Scegli file
 
 label.browse=Selezionare i file da caricare
 label.multiUploadTip=Utilizzare CTRL o MAIUSC per selezionare pi\u00f9 file
-label.singleUpdateTip=Scegliere l''icona per caricare una nuova versione di {0}
-label.noFiles=Nessun file da visualizzare, scegliere l'icona per selezionare i file da caricare
-label.noFlash=\u00c8 necessario Flash Player versione 9.0.45 o successiva per l'utilizzo di questo componente. \u00c8 possibile scaricare l'ultima versione di Flash Player da \
+label.singleUpdateTip=Fare clic sull''icona per caricare una nuova versione di {0}
+label.noFiles=Nessun file da visualizzare, fare clic sull'icona per selezionare i file da caricare
+label.noFlash=Per utilizzare questo componente \u00e8 necessario avere la versione di Flash Player 9.0.45 o quella successiva. \u00c8 possibile scaricare l'ultima versione di Flash Player da \
   <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player Download Center</a>.
 label.success=Operazione riuscita
 label.failure=Operazione non riuscita
-button.upload=Carica pi\u00f9 file
+button.upload=Carica file
 label.uploadStatus=Stato: {0}/{1} caricati ({2} non riusciti)
 message.cancelStatus=Caricamenti annullati; {0} file caricati
-message.zeroByteFileSelected=\u00c8 stato selezionato il file {0}. Questo file non pu\u00f2 essere caricato perch\u00e9 ha dimensioni 0b.
+message.zeroByteFileSelected=\u00c8 stato selezionato il file {0}. Impossibile caricare il file poich\u00e9 presenta dimensioni pari a 0 byte.
 message.flashError.title=Errore di comunicazione con Flash
-message.flashError.message=Il browser non \u00e8 in grado di comunicare con Flash Uploader. \u00c8 possibile continuare ad archiviare i record nella modalit\u00e0 a file singolo o aggiornare la pagina per riavviare Flash.
+message.flashError.message=Il browser non \u00e8 in grado di comunicare con Flash Uploader. \u00c8 possibile procedere con l'archiviazione dei record in un unico file, o aggiornare la pagina per riavviare Flash.
 
 section.version=Informazioni sulla versione
 label.version=Questa versione dispone di:
@@ -31,5 +31,5 @@ label.contentType=Tipo di contenuto
 type.cm_content=Contenuto
 
 label.recordType=Tipi di record
-label.recordType.description=Nota: tutti i file in elenco saranno contrassegnati come i tipi selezionati.
-recordType.default=Predefinito
+label.recordType.description=Nota: tutti i file elencati saranno contrassegnati come i tipi prescelti.
+recordType.default=Impostazione predefinita
