JAPANESE: Japanese RM 2.2 UI Bundle based on EN rev71684
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@73627 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/audit/audit.get_ja.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/audit/audit.get_ja.properties
@@ -1,7 +1,7 @@
 label.title=\u76e3\u67fb\u30ed\u30b0
 label.title-for={0}\u306e\u76e3\u67fb\u30ed\u30b0
-label.from=\u958b\u59cb\u65e5
-label.to=\u7d42\u4e86\u65e5
+label.from=\u9001\u4fe1\u8005
+label.to=\u5b9b\u5148
 
 label.yes=\u306f\u3044
 label.no=\u3044\u3044\u3048
@@ -14,7 +14,7 @@ label.clearing-log-message=\u304a\u5f85\u3061\u304f\u3060\u3055\u3044\u3002\u76e
 label.cleared-log-message=\u76e3\u67fb\u30ed\u30b0\u306f\u6d88\u53bb\u3055\u308c\u307e\u3057\u305f\u3002
 message.clear-log-fail = \u76e3\u67fb\u30ed\u30b0\u3092\u6d88\u53bb\u3059\u308b\u969b\u306b\u30a8\u30e9\u30fc\u304c\u767a\u751f\u3057\u307e\u3057\u305f\u3002
 
-label.stopped-at=\u76e3\u67fb\u30ed\u30b0\u306f{0}\u306b\u505c\u6b62\u3057\u307e\u3057\u305f
+label.stopped-at=\u76e3\u67fb\u30ed\u30b0\u306f{0}\u3067\u505c\u6b62\u3057\u307e\u3057\u305f
 label.stop-log-title=\u76e3\u67fb\u30ed\u30b0\u3092\u505c\u6b62\u3057\u307e\u3059\u304b?
 label.stop-log-confirmation=\u76e3\u67fb\u30ed\u30b0\u3092\u505c\u6b62\u3057\u3066\u3082\u3088\u308d\u3057\u3044\u3067\u3059\u304b?
 label.stopping-log-message=\u304a\u5f85\u3061\u304f\u3060\u3055\u3044\u3002\u76e3\u67fb\u30ed\u30b0\u3092\u505c\u6b62\u3057\u3066\u3044\u307e\u3059\u3002
@@ -37,7 +37,7 @@ label.button-export=\u30a8\u30af\u30b9\u30dd\u30fc\u30c8
 label.button-file-record=\u30ec\u30b3\u30fc\u30c9\u3068\u3057\u3066\u6574\u7406\u4fdd\u7ba1
 
 label.filed-log-message=\u76e3\u67fb\u30ed\u30b0\u306f\u30ec\u30b3\u30fc\u30c9\u3068\u3057\u3066\u6574\u7406\u4fdd\u7ba1\u3055\u308c\u3066\u3044\u307e\u3059\u3002
-message.file-log-fail=\u76e3\u67fb\u30ed\u30b0\u3092\u30ec\u30b3\u30fc\u30c9\u3068\u3057\u3066\u6574\u7406\u4fdd\u7ba1\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002
+message.file-log-fail=\u76e3\u67fb\u3092\u30ec\u30b3\u30fc\u30c9\u3068\u3057\u3066\u6574\u7406\u4fdd\u7ba1\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002
 label.file-record=\u30ec\u30b3\u30fc\u30c9\u306e\u6574\u7406\u4fdd\u7ba1
 
 
@@ -55,3 +55,6 @@ label.no-previous=<\u306a\u3057>
 
 node.root=\u30d5\u30a1\u30a4\u30eb\u30d7\u30e9\u30f3
 title.single=\u76e3\u67fb\u30ec\u30b3\u30fc\u30c9\u306e\u5834\u6240\u3092\u9078\u629e\u3059\u308b
+
+label.select.recordfolder.title=\u30ec\u30b3\u30fc\u30c9\u30d5\u30a9\u30eb\u30c0\u3092\u9078\u629e\u3059\u308b
+label.select.recordfolder.text=\u30ec\u30b3\u30fc\u30c9\u30d5\u30a9\u30eb\u30c0\u3092\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044
