--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_ja.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_ja.properties
@@ -1,6 +1,6 @@
 label.custom-metadata-title=\u30ab\u30b9\u30bf\u30e0\u30e1\u30bf\u30c7\u30fc\u30bf
-label.create-metadata-title=\u65b0\u898f\u30e1\u30bf\u30c7\u30fc\u30bf
-label.edit-metadata-title=\u30e1\u30bf\u30c7\u30fc\u30bf\u30d7\u30ed\u30d1\u30c6\u30a3\u306e\u7de8\u96c6
+label.create-metadata-title=\u65b0\u3057\u3044\u30e1\u30bf\u30c7\u30fc\u30bf
+label.edit-metadata-title=\u30e1\u30bf\u30c7\u30fc\u30bf\u306e\u30d7\u30ed\u30d1\u30c6\u30a3\u306e\u7de8\u96c6
 label.list-title=\u30aa\u30d6\u30b8\u30a7\u30af\u30c8
 label.custom-metadata=\u30ab\u30b9\u30bf\u30e0\u30e1\u30bf\u30c7\u30fc\u30bf
 label.selection-list=\u9078\u629e\u30ea\u30b9\u30c8
@@ -10,19 +10,19 @@ label.mandatory=\u5fc5\u9808
 
 label.datatype.unknown=\u4e0d\u660e
 label.datatype.text=\u30c6\u30ad\u30b9\u30c8
-label.datatype.boolean=\u30d6\u30fc\u30eb\u5024
+label.datatype.boolean=\u8ad6\u7406\u578b
 label.datatype.date=\u65e5\u4ed8
 
 message.getpropertiesfail=\u30ab\u30b9\u30bf\u30e0\u30d7\u30ed\u30d1\u30c6\u30a3\u5b9a\u7fa9\u3092\u53d6\u5f97\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002
-message.noproperties=\u30ab\u30b9\u30bf\u30e0\u30d7\u30ed\u30d1\u30c6\u30a3\u306f\u5b9a\u7fa9\u3055\u308c\u3066\u3044\u307e\u305b\u3093\u3002
-message.create-success=\u65b0\u3057\u3044\u30ab\u30b9\u30bf\u30e0\u30d7\u30ed\u30d1\u30c6\u30a3\u306f\u6b63\u5e38\u306b\u8ffd\u52a0\u3055\u308c\u307e\u3057\u305f\u3002
-message.create-failure=\u65b0\u3057\u3044\u30ab\u30b9\u30bf\u30e0\u30d7\u30ed\u30d1\u30c6\u30a3{0}\u3092\u8ffd\u52a0\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f 
-message.edit-success=\u30ab\u30b9\u30bf\u30e0\u30d7\u30ed\u30d1\u30c6\u30a3\u306f\u6b63\u5e38\u306b\u4fdd\u5b58\u3055\u308c\u307e\u3057\u305f\u3002
-message.edit-failure=\u30ab\u30b9\u30bf\u30e0\u30d7\u30ed\u30d1\u30c6\u30a3{0}\u3092\u4fdd\u5b58\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f 
+message.noproperties=\u30ab\u30b9\u30bf\u30e0\u30d7\u30ed\u30d1\u30c6\u30a3\u304c\u5b9a\u7fa9\u3055\u308c\u3066\u3044\u307e\u305b\u3093\u3002
+message.create-success=\u65b0\u3057\u3044\u30ab\u30b9\u30bf\u30e0\u30d7\u30ed\u30d1\u30c6\u30a3\u304c\u6b63\u5e38\u306b\u8ffd\u52a0\u3055\u308c\u307e\u3057\u305f\u3002
+message.create-failure=\u65b0\u3057\u3044\u30ab\u30b9\u30bf\u30e0\u30d7\u30ed\u30d1\u30c6\u30a3{0}\u3092\u8ffd\u52a0\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
+message.edit-success=\u30ab\u30b9\u30bf\u30e0\u30d7\u30ed\u30d1\u30c6\u30a3\u3092\u6b63\u5e38\u306b\u4fdd\u5b58\u3057\u307e\u3057\u305f\u3002
+message.edit-failure=\u30ab\u30b9\u30bf\u30e0\u30d7\u30ed\u30d1\u30c6\u30a3{0}\u3092\u4fdd\u5b58\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
 message.delete.title=\u30ab\u30b9\u30bf\u30e0\u30d7\u30ed\u30d1\u30c6\u30a3\u306e\u524a\u9664
-message.delete.text={0}\u3092\u524a\u9664\u3057\u3066\u3082\u3088\u308d\u3057\u3044\u3067\u3059\u304b\uff1f 
-message.delete-success=\u30ab\u30b9\u30bf\u30e0\u30d7\u30ed\u30d1\u30c6\u30a3\u306f\u6b63\u5e38\u306b\u524a\u9664\u3055\u308c\u307e\u3057\u305f\u3002
-message.delete-failure=\u30ab\u30b9\u30bf\u30e0\u30d7\u30ed\u30d1\u30c6\u30a3{0}\u3092\u524a\u9664\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f 
+message.delete.text={0}\u3092\u524a\u9664\u3057\u307e\u3059\u304c\u3001\u3088\u308d\u3057\u3044\u3067\u3059\u304b\u3002
+message.delete-success=\u30ab\u30b9\u30bf\u30e0\u30d7\u30ed\u30d1\u30c6\u30a3\u3092\u6b63\u5e38\u306b\u524a\u9664\u3057\u307e\u3057\u305f\u3002
+message.delete-failure=\u30ab\u30b9\u30bf\u30e0\u30d7\u30ed\u30d1\u30c6\u30a3{0}\u3092\u524a\u9664\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
 
 mandatory.true=True
 mandatory.false=False
