--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-list-of-values.get_ja.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-list-of-values.get_ja.properties
@@ -1,4 +1,4 @@
-﻿label.view-listofvalues-title=\u30ea\u30b9\u30c8
+label.view-listofvalues-title=\u30ea\u30b9\u30c8
 label.edit-listofvalue-title=\u30ea\u30b9\u30c8{0}\u306e\u7de8\u96c6
 label.values=\u5024
 label.access=\u30a2\u30af\u30bb\u30b9
