--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/references/new-reference.get_ja.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/references/new-reference.get_ja.properties
@@ -1,6 +1,6 @@
 label.title-new-reference = \u65b0\u898f\u53c2\u7167
 label.select = \u9078\u629e
-label.record-link = \u30ec\u30b3\u30fc\u30c9\u306b\u30ea\u30f3\u30af
+label.record-link = \u30ec\u30b3\u30fc\u30c9\u3078\u306e\u30ea\u30f3\u30af
 label.record-rel = \u95a2\u4fc2
 label.name = \u53c2\u7167\u540d
 label.required = \u5fc5\u9808\u30d5\u30a3\u30fc\u30eb\u30c9
