--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_ja.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_ja.properties
@@ -1,5 +1,4 @@
-﻿header.action=\u30a2\u30af\u30b7\u30e7\u30f3\u306e\u5b9f\u884c\uff1a
-button.freeze=\u56fa\u5b9a...
+header.action=\u30a2\u30af\u30b7\u30e7\u30f3\u306e\u5b9f\u884c\uff1a
 button.reject=\u5374\u4e0b...
 button.requestInfo=\u60c5\u5831\u306e\u30ea\u30af\u30a8\u30b9\u30c8...
 button.select-folder=\u9078\u629e...
@@ -14,7 +13,7 @@ dialog.destination.title=\u5b9b\u5148\u30d5\u30a9\u30eb\u30c0\u306e\u9078\u629e
 
 ## Format used for date entry in date picker, 'entry' format is used by date parsing code,
 ## 'display' format is shown to the user under date entry field
-form.control.date-picker.entry.date.format=yyyy/M/d
+form.control.date-picker.entry.date.format=yyyy/MM/d
 form.control.date-picker.display.date.format=YYYY/MM/DD
 
 ## Format used for time entry in datetime picker, 'entry' format is used by date parsing code,
@@ -27,12 +26,12 @@ record.folder.path.help=<p>\u6b21\u306e\u7f6e\u63db\u304c\u53ef\u80fd\u3067\u305
    <p></p>\
    <p>date.day.short = Sun</p>\
    <p>date.day = Sun</p>\
-   <p>date.day.long = Sunday</p>\
+   <p>date.day.long = \u65e5\u66dc\u65e5</p>\
    <p>date.day.number = 7 (1-7)</p>\
    <p>date.day.year = 216 (001-365)</p>\
    <p>date.month.short = Aug</p>\
    <p>date.month = Aug</p>\
-   <p>date.month.long = August</p>\
+   <p>date.month.long = 8\u6708</p>\
    <p>date.month.number = 08 (01-12)</p>\
    <p>date.year.short = 13</p>\
    <p>date.year = 13</p>\
