--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get_ja.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get_ja.properties
@@ -1,4 +1,4 @@
-﻿message.loading=\u8aad\u307f\u8fbc\u3093\u3067\u3044\u307e\u3059...
+message.loading=\u8aad\u307f\u8fbc\u3093\u3067\u3044\u307e\u3059...
 message.empty=\u691c\u7d22\u7d50\u679c\u306f\u898b\u3064\u304b\u308a\u307e\u305b\u3093\u3067\u3057\u305f\u3002
 message.error=\u691c\u7d22\u4e2d\u306e\u30a8\u30e9\u30fc
 message.foundresults={0}\u4ef6\u306e\u30a2\u30a4\u30c6\u30e0\u3092\u691c\u51fa\u3057\u307e\u3057\u305f\u3002
@@ -14,7 +14,7 @@ message.deletesearch.failure=\u691c\u7d22\u3092\u524a\u9664\u3067\u304d\u307e\u3
 
 label.searchtitle=\u691c\u7d22
 label.searchterm=\u30af\u30a8\u30ea\u30c6\u30ad\u30b9\u30c8
-label.criteria=\u6761\u4ef6
+label.criteria=\u57fa\u6e96
 label.results=\u7d50\u679c
 label.insertfield=\u30d5\u30a3\u30fc\u30eb\u30c9\u306e\u633f\u5165
 label.select=\u9078\u629e...
@@ -25,16 +25,17 @@ label.undeclared=\u672a\u5b8c\u4e86\u3092\u542b\u3080
 label.vital=\u5fc5\u9808\u306e\u307f\u306e\u8868\u793a
 label.recordFolders=\u30ec\u30b3\u30fc\u30c9\u30d5\u30a9\u30eb\u30c0\u306e\u8868\u793a
 label.recordCategories=\u30ec\u30b3\u30fc\u30c9\u30ab\u30c6\u30b4\u30ea\u306e\u8868\u793a
-label.frozen=\u56fa\u5b9a\u6e08\u307f\u306e\u307f\u306e\u8868\u793a\uff08\u672a\u9078\u629e\u6642\u306f\u9664\u5916\uff09
+label.frozen=\u30db\u30fc\u30eb\u30c9\u4e2d\u306e\u307f\u306e\u8868\u793a\uff08\u672a\u9078\u629e\u6642\u306f\u9664\u5916\uff09
 label.cutoff=\u30ab\u30c3\u30c8\u30aa\u30d5\u306e\u307f\u306e\u8868\u793a
 
 button.newsearch=\u65b0\u898f\u691c\u7d22
 button.savesearch=\u691c\u7d22\u306e\u4fdd\u5b58...
 button.savedsearches=\u4fdd\u5b58\u3057\u305f\u691c\u7d22\u6761\u4ef6
 button.deletesearch=\u691c\u7d22\u306e\u524a\u9664
-button.print=\u30d7\u30ea\u30f3\u30bf\u30fc\u30ec\u30a4\u30a2\u30a6\u30c8
+button.print=\u5370\u5237\u30ec\u30a4\u30a2\u30a6\u30c8
 button.screen=\u753b\u9762\u30ec\u30a4\u30a2\u30a6\u30c8
 button.export=\u30a8\u30af\u30b9\u30dd\u30fc\u30c8
+button.add-to-hold=\u30db\u30fc\u30eb\u30c9\u306b\u8ffd\u52a0
 
 # RM Results Common
 label.options=\u7d50\u679c\u30aa\u30d7\u30b7\u30e7\u30f3
@@ -56,9 +57,9 @@ label.dispositionEvents=\u5ec3\u68c4\u30a4\u30d9\u30f3\u30c8
 label.dispositionActionName=\u5ec3\u68c4\u30a2\u30af\u30b7\u30e7\u30f3\u306e\u540d\u524d
 label.dispositionActionAsOf=\u73fe\u6642\u70b9\u3067\u306e\u5ec3\u68c4\u30a2\u30af\u30b7\u30e7\u30f3
 label.dispositionEventsEligible=\u5ec3\u68c4\u30a4\u30d9\u30f3\u30c8\u304c\u8a31\u53ef\u6e08\u307f
-label.vitalRecordReviewPeriod=\u5fc5\u9808\u30ec\u30b3\u30fc\u30c9\u306e\u30ec\u30d3\u30e5\u30fc\u671f\u9593
+label.vitalRecordReviewPeriod=\u30d0\u30a4\u30bf\u30eb\u30ec\u30b3\u30fc\u30c9\u306e\u30ec\u30d3\u30e5\u30fc\u671f\u9593
 label.hasDispositionSchedule=\u5ec3\u68c4\u30b9\u30b1\u30b8\u30e5\u30fc\u30eb\u304c\u3042\u308b
 label.dispositionPeriod=\u5ec3\u68c4\u671f\u9593
 label.dispositionInstructions=\u5ec3\u68c4\u6307\u793a
 label.dispositionAuthority=\u5ec3\u68c4\u6a29\u9650
-label.holdReason=\u4fdd\u7559\u7406\u7531
+label.holdReason=\u30db\u30fc\u30eb\u30c9\u7406\u7531
