--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_ja.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_ja.properties
@@ -1,4 +1,4 @@
-﻿label.header-title=\u76e3\u67fb
+label.header-title=\u76e3\u67fb
 
 label.yes=\u306f\u3044
 label.no=\u3044\u3044\u3048
@@ -12,7 +12,7 @@ label.clearing-log-message=\u304a\u5f85\u3061\u304f\u3060\u3055\u3044\u3002\u76e
 label.cleared-log-message=\u76e3\u67fb\u30ed\u30b0\u306f\u6d88\u53bb\u3055\u308c\u307e\u3057\u305f\u3002
 message.clear-log-fail = \u76e3\u67fb\u30ed\u30b0\u3092\u6d88\u53bb\u3059\u308b\u969b\u306b\u30a8\u30e9\u30fc\u304c\u767a\u751f\u3057\u307e\u3057\u305f\u3002
 
-label.stopped-at=\u76e3\u67fb\u30ed\u30b0\u306f{0}\u306b\u505c\u6b62\u3057\u307e\u3057\u305f
+label.stopped-at=\u76e3\u67fb\u30ed\u30b0\u306f{0}\u3067\u505c\u6b62\u3057\u307e\u3057\u305f
 label.stop-log-title=\u76e3\u67fb\u30ed\u30b0\u3092\u505c\u6b62\u3057\u307e\u3059\u304b?
 label.stop-log-confirmation=\u76e3\u67fb\u30ed\u30b0\u3092\u505c\u6b62\u3057\u3066\u3082\u3088\u308d\u3057\u3044\u3067\u3059\u304b?
 label.stopping-log-message=\u304a\u5f85\u3061\u304f\u3060\u3055\u3044\u3002\u76e3\u67fb\u30ed\u30b0\u3092\u505c\u6b62\u3057\u3066\u3044\u307e\u3059\u3002
@@ -39,7 +39,7 @@ label.button-apply=\u9069\u7528
 label.button-details=\u8a73\u7d30
 
 label.filed-log-message=\u76e3\u67fb\u30ed\u30b0\u306f\u30ec\u30b3\u30fc\u30c9\u3068\u3057\u3066\u6574\u7406\u4fdd\u7ba1\u3055\u308c\u3066\u3044\u307e\u3059\u3002
-message.filing-log-fail=\u76e3\u67fb\u30ed\u30b0\u3092\u30ec\u30b3\u30fc\u30c9\u3068\u3057\u3066\u6574\u7406\u4fdd\u7ba1\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002
+message.filing-log-fail=\u76e3\u67fb\u3092\u30ec\u30b3\u30fc\u30c9\u3068\u3057\u3066\u6574\u7406\u4fdd\u7ba1\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002
 label.file-record=\u30ec\u30b3\u30fc\u30c9\u306e\u6574\u7406\u4fdd\u7ba1
 
 label.timestamp=\u30bf\u30a4\u30e0\u30b9\u30bf\u30f3\u30d7
@@ -70,4 +70,4 @@ label.property=\u30d7\u30ed\u30d1\u30c6\u30a3
 label.previous-value=\u4ee5\u524d\u306e\u5024
 label.new-value=\u65b0\u3057\u3044\u5024
 
-message.load-peopleFinder-failure=\u30e6\u30fc\u30b6\u30fc\u691c\u7d22\u30b3\u30f3\u30dd\u30fc\u30cd\u30f3\u30c8\u3092\u8aad\u307f\u8fbc\u3080\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
+message.load-peopleFinder-failure=\u30e6\u30fc\u30b6\u30fc\u691c\u7d22\u30b3\u30f3\u30dd\u30fc\u30cd\u30f3\u30c8\u3092\u8aad\u307f\u8fbc\u3081\u307e\u305b\u3093\u3067\u3057\u305f
