--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-events.get_ja.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-events.get_ja.properties
@@ -1,7 +1,7 @@
 label.viewevents.title=\u30a4\u30d9\u30f3\u30c8
 label.createevent.title=\u65b0\u898f\u30a4\u30d9\u30f3\u30c8
 label.editevent.title=\u30a4\u30d9\u30f3\u30c8\u306e\u7de8\u96c6
-label.general=\u5168\u822c
+label.general=\u4e00\u822c
 label.label=\u30e9\u30d9\u30eb
 label.type=\u30bf\u30a4\u30d7
 label.required=\u5fc5\u9808\u30d5\u30a3\u30fc\u30eb\u30c9
@@ -10,11 +10,11 @@ button.newevent=\u65b0\u898f\u30a4\u30d9\u30f3\u30c8
 
 message.confirm.removeevent.title=\u30a4\u30d9\u30f3\u30c8\u306e\u524a\u9664
 message.confirm.removeevent.text=''{0}''\u3092\u524a\u9664\u3057\u3066\u3082\u3088\u308d\u3057\u3044\u3067\u3059\u304b?
-message.removeevent.success=\u30a4\u30d9\u30f3\u30c8\u306f\u6b63\u5e38\u306b\u524a\u9664\u3055\u308c\u307e\u3057\u305f\u3002
+message.removeevent.success=\u30a4\u30d9\u30f3\u30c8\u3092\u6b63\u5e38\u306b\u524a\u9664\u3057\u307e\u3057\u305f\u3002
 message.removeevent.failure=\u30a4\u30d9\u30f3\u30c8\u3092\u524a\u9664\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002
 message.saveevent.saving=\u30a4\u30d9\u30f3\u30c8\u3092\u4fdd\u5b58\u3057\u3066\u3044\u307e\u3059...
-message.loadevent.failure=\u30a4\u30d9\u30f3\u30c8\u306e\u30c7\u30fc\u30bf\u3092\u8aad\u307f\u8fbc\u3080\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002
-message.loadevents.failure=\u30a4\u30d9\u30f3\u30c8\u3092\u8aad\u307f\u8fbc\u3080\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002
-message.loadevents.loading=\u30a4\u30d9\u30f3\u30c8\u3092\u8aad\u307f\u8fbc\u3093\u3067\u3044\u307e\u3059...
+message.loadevent.failure=\u30a4\u30d9\u30f3\u30c8\u306e\u30c7\u30fc\u30bf\u3092\u8aad\u307f\u8fbc\u3081\u307e\u305b\u3093\u3067\u3057\u305f\u3002
+message.loadevents.failure=\u30a4\u30d9\u30f3\u30c8\u3092\u8aad\u307f\u8fbc\u3081\u307e\u305b\u3093\u3067\u3057\u305f\u3002
+message.loadevents.loading=\u30a4\u30d9\u30f3\u30c8\u3092\u8aad\u307f\u8fbc\u3093\u3067\u3044\u307e\u3059\u30fb\u30fb\u30fb
 message.empty=\u30a4\u30d9\u30f3\u30c8\u304c\u5b58\u5728\u3057\u307e\u305b\u3093\u3002
-message.error=\u30a4\u30d9\u30f3\u30c8\u3092\u8aad\u307f\u8fbc\u3080\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002
+message.error=\u30a4\u30d9\u30f3\u30c8\u3092\u8aad\u307f\u8fbc\u3081\u307e\u305b\u3093\u3067\u3057\u305f\u3002
