--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-references.get_ja.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-references.get_ja.properties
@@ -1,8 +1,8 @@
 label.view-references-title=\u30ea\u30f3\u30af\u95a2\u4fc2
 label.title.parentchild={0}\u3001{1}
-label.create-references-title=\u65b0\u898f\u95a2\u4fc2
-label.edit-references-title=\u95a2\u4fc2\u306e\u7de8\u96c6
-label.general=\u5168\u822c
+label.create-references-title=\u65b0\u3057\u3044\u95a2\u4fc2
+label.edit-references-title=\u95a2\u4fc2\u3092\u7de8\u96c6
+label.general=\u4e00\u822c
 label.type=\u30bf\u30a4\u30d7
 label.bidirectional=\u53cc\u65b9\u5411
 label.label=\u30e9\u30d9\u30eb
@@ -10,15 +10,15 @@ label.parentchild=\u89aa/\u5b50
 label.source=\u30bd\u30fc\u30b9
 label.target=\u30bf\u30fc\u30b2\u30c3\u30c8
 
-button.newreference=\u65b0\u898f\u95a2\u4fc2
+button.newreference=\u65b0\u3057\u3044\u95a2\u4fc2
 
-message.confirm.removereference.title=\u95a2\u4fc2\u306e\u524a\u9664
+message.confirm.removereference.title=\u95a2\u4fc2\u3092\u524a\u9664
 message.confirm.removereference.text=''{0}''\u3092\u524a\u9664\u3057\u3066\u3082\u3088\u308d\u3057\u3044\u3067\u3059\u304b?
-message.confirm.removereference.text.parentchild=''{0}\u3001{1}''\u3092\u524a\u9664\u3057\u3066\u3082\u3088\u308d\u3057\u3044\u3067\u3059\u304b?
-message.removereference-success=\u53c2\u7167\u306f\u6b63\u5e38\u306b\u524a\u9664\u3055\u308c\u307e\u3057\u305f\u3002
+message.confirm.removereference.text.parentchild=''{0}, {1}''\u3092\u524a\u9664\u3057\u3066\u3082\u3088\u308d\u3057\u3044\u3067\u3059\u304b?
+message.removereference-success=\u53c2\u7167\u3092\u6b63\u5e38\u306b\u524a\u9664\u3057\u307e\u3057\u305f\u3002
 message.removereference-failure=\u95a2\u4fc2\u3092\u524a\u9664\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002
 message.savingReference=\u95a2\u4fc2\u3092\u4fdd\u5b58\u3057\u3066\u3044\u307e\u3059...
-message.loadreference-failure=\u95a2\u4fc2\u306e\u30c7\u30fc\u30bf\u3092\u8aad\u307f\u8fbc\u3080\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002
+message.loadreference-failure=\u95a2\u4fc2\u306e\u30c7\u30fc\u30bf\u3092\u8aad\u307f\u8fbc\u3081\u307e\u305b\u3093\u3067\u3057\u305f\u3002
 message.loading=\u95a2\u4fc2\u3092\u8aad\u307f\u8fbc\u3093\u3067\u3044\u307e\u3059...
 message.empty=\u95a2\u4fc2\u304c\u5b58\u5728\u3057\u307e\u305b\u3093\u3002
-message.error=\u95a2\u4fc2\u3092\u8aad\u307f\u8fbc\u3080\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002
+message.error=\u95a2\u4fc2\u3092\u8aad\u307f\u8fbc\u3081\u307e\u305b\u3093\u3067\u3057\u305f\u3002
