--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/report.get_ja.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/report.get_ja.properties
@@ -1,12 +1,12 @@
 label.user=\u30e6\u30fc\u30b6\u30fc
-label.dateAndTime=\u65e5\u4ed8\u3068\u6642\u523b
+label.dateAndTime=\u65e5\u6642
 label.parentPath=\u30d1\u30b9
 label.recordSeriesIdentifier=\u30ec\u30b3\u30fc\u30c9\u30b7\u30ea\u30fc\u30baID
 label.recordCategoryIdentifier=\u30ec\u30b3\u30fc\u30c9\u30ab\u30c6\u30b4\u30eaID
 label.recordFolderIdentifier=\u30ec\u30b3\u30fc\u30c9\u30d5\u30a9\u30eb\u30c0ID
-label.vitalRecordIndicator=\u5fc5\u9808\u30ec\u30b3\u30fc\u30c9\u30a4\u30f3\u30b8\u30b1\u30fc\u30bf\u30fc
+label.vitalRecordIndicator=\u30d0\u30a4\u30bf\u30eb\u30ec\u30b3\u30fc\u30c9\u30a4\u30f3\u30b8\u30b1\u30fc\u30bf\u30fc
 label.dispositionAuthority=\u5ec3\u68c4\u6a29\u9650
 label.noDispositionAuthority=\u306a\u3057
 label.dispositionSchedule=\u5ec3\u68c4\u30b9\u30b1\u30b8\u30e5\u30fc\u30eb
-label.noActions=\u624b\u9806\u306a\u3057
+label.noActions=\u30b9\u30c6\u30c3\u30d7\u306a\u3057
 label.noActionDescription=\uff08\u6307\u793a\u306a\u3057\uff09
