--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-condition.get_ja.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-condition.get_ja.properties
@@ -1,12 +1,12 @@
-header.condition.if=\u57fa\u6e96\u304c\u3059\u3079\u3066\u6e80\u305f\u3055\u308c\u305f\u5834\u5408\uff1a
-header.condition.unless=\u57fa\u6e96\u304c\u3059\u3079\u3066\u6e80\u305f\u3055\u308c\u306a\u3044\u5834\u5408\uff1a
+header.condition.if=\u57fa\u6e96\u304c\u3059\u3079\u3066\u6e80\u305f\u3055\u308c\u305f\u5834\u5408:
+header.condition.unless=\u57fa\u6e96\u304c\u3059\u3079\u3066\u6e80\u305f\u3055\u308c\u306a\u3044\u5834\u5408:
 menu.item.show-more=\u3055\u3089\u306b\u8868\u793a...
-label.noRendererForType=\u30a8\u30e9\u30fc\uff1a \u30bf\u30a4\u30d7''{0}''\u306e\u30ec\u30f3\u30c0\u30e9\u30fc\u304c\u3042\u308a\u307e\u305b\u3093
+label.noRendererForType=\u30a8\u30e9\u30fc: \u30bf\u30a4\u30d7''{0}''\u306e\u30ec\u30f3\u30c0\u30e9\u304c\u3042\u308a\u307e\u305b\u3093
 label.is=\u304c
 label.sizeUnit=\u30d0\u30a4\u30c8
-label.transientProperty={1}\u3067\u306e{0}
-message.getPropertiesFailure=\u30d7\u30ed\u30d1\u30c6\u30a3\u3092\u8aad\u307f\u8fbc\u3080\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
-message.getTagFailure=\u30bf\u30b0\u3092\u8aad\u307f\u8fbc\u3080\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
+label.transientProperty={0} / {1}
+message.getPropertiesFailure=\u30d7\u30ed\u30d1\u30c6\u30a3\u3092\u8aad\u307f\u8fbc\u3081\u307e\u305b\u3093\u3067\u3057\u305f
+message.getTagFailure=\u30bf\u30b0\u3092\u8aad\u307f\u8fbc\u3081\u307e\u305b\u3093\u3067\u3057\u305f
 
 ## Format used for date entry in date picker, 'entry' format is used by date parsing code,
 ## 'display' format is shown to the user under date entry field
@@ -20,8 +20,8 @@ form.control.date-picker.display.time.format=HH:MM\uff0824\u6642\u9593\uff09
 
 customise.compare-property-value.text={name} {param.operation} {param.value}
 customise.compare-property-value.text.hyphen={name} {param.operation} ''{param.value}''
-customise.compare-mime-type.text={name}\u306f''{param.value}''\u3067\u3059
-customise.is-subtype.text=\u30bf\u30a4\u30d7\uff08\u307e\u305f\u306f\u30b5\u30d6\u30bf\u30a4\u30d7\uff09''{param.type}''\u3067\u3059
-customise.has-aspect.text=\u30a2\u30b9\u30da\u30af\u30c8''{param.aspect}''\u304c\u3042\u308a\u307e\u3059
-customise.has-tag.text=''{param.tag}''\u3067\u30bf\u30b0\u304c\u4ed8\u3051\u3089\u308c\u307e\u3059
-customise.in-category.text=\u30ab\u30c6\u30b4\u30ea''{param.category-value}''\u306b\u3042\u308a\u307e\u3059
+customise.compare-mime-type.text={name}\u304c''{param.value}''
+customise.is-subtype.text=''{param.type}''\u30bf\u30a4\u30d7\u3042\u308b\u3044\u306f\u305d\u306e\u30b5\u30d6\u30bf\u30a4\u30d7
+customise.has-aspect.text=\u30a2\u30b9\u30da\u30af\u30c8''{param.aspect}''\u3092\u6301\u3064
+customise.has-tag.text=''{param.tag}''\u306e\u30bf\u30b0\u4ed8\u304d
+customise.in-category.text=\u30ab\u30c6\u30b4\u30ea''{param.category-value}''\u306b\u542b\u307e\u308c\u3066\u3044\u308b
