--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/dnd-upload.get_ja.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/dnd-upload.get_ja.properties
@@ -1,4 +1,4 @@
-﻿header.singleUpload=\u30d5\u30a1\u30a4\u30eb\u306e\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9
+header.singleUpload=\u30d5\u30a1\u30a4\u30eb\u306e\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9
 header.multiUpload.singleFile=\u30d5\u30a1\u30a4\u30eb\u3092{0}\u306b\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u3059\u308b
 #header.multiUpload=Upload Files to {0}
 header.singleUpdate=\u30d5\u30a1\u30a4\u30eb\u306e\u66f4\u65b0
@@ -9,7 +9,7 @@ label.documents=\u6587\u66f8
 label.success=\u6210\u529f
 label.failure=\u5931\u6557\uff1a{0}
 label.failure.413=\u5931\u6557\uff1a\u30af\u30a9\u30fc\u30bf\u8d85\u904e
-label.failure.409=\u5931\u6557\uff1a\u30b3\u30f3\u30c6\u30f3\u30c4\u30b5\u30a4\u30ba\u9055\u53cd
+label.failure.409=\u5931\u6557\uff1a\u30b3\u30f3\u30c6\u30f3\u30c4\u30b5\u30a4\u30ba\u30a8\u30e9\u30fc
 label.failure.fileTooBig=\u5931\u6557\uff1a25MB\u4ee5\u4e0a\u306e\u30d5\u30a1\u30a4\u30eb
 label.uploadStatus={1}\u30d5\u30a1\u30a4\u30eb\u306e\u3046\u3061{0}\u5b8c\u4e86
 label.uploadStatus.withFailures={1}\u30d5\u30a1\u30a4\u30eb\u306e\u3046\u3061{0}\u5b8c\u4e86\uff08{2}\u5931\u6557\uff09
@@ -24,10 +24,10 @@ message.maxFileFileSizeExceeded=\u30d5\u30a1\u30a4\u30eb{0}\u306f\u5927\u304d\u3
 
 section.version=\u30d0\u30fc\u30b8\u30e7\u30f3\u60c5\u5831
 label.version=\u3053\u306e\u30d0\u30fc\u30b8\u30e7\u30f3\u3067\u306e\u6539\u8a02\u5185\u5bb9\uff1a
-label.minorVersion=\u5c0f\u3055\u306a\u5909\u66f4
-label.majorVersion=\u5927\u304d\u306a\u5909\u66f4
-label.minorVersion.more=\u5c0f\u3055\u306a\u5909\u66f4\uff08{0}\uff09
-label.majorVersion.more=\u5927\u304d\u306a\u5909\u66f4\uff08{0}\uff09
+label.minorVersion=\u82e5\u5e72\u306e\u5909\u66f4
+label.majorVersion=\u5927\u5e45\u306a\u5909\u66f4
+label.minorVersion.more=\u82e5\u5e72\u306e\u5909\u66f4\uff08{0}\uff09
+label.majorVersion.more=\u5927\u5e45\u306a\u5909\u66f4\uff08{0}\uff09
 label.comments=\u30b3\u30e1\u30f3\u30c8
 
 type.cm_content=\u30b3\u30f3\u30c6\u30f3\u30c4
