--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/flash-upload.get_ja.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/flash-upload.get_ja.properties
@@ -6,20 +6,20 @@ header.singleImport=\u30a4\u30f3\u30dd\u30fc\u30c8
 section.recordType=\u30ec\u30b3\u30fc\u30c9\u30bf\u30a4\u30d7\u306e\u9078\u629e
 section.file=\u30d5\u30a1\u30a4\u30eb\u306e\u9078\u629e
 
-label.browse=\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u3059\u308b\u30d5\u30a1\u30a4\u30eb\u3092\u9078\u629e\u3059\u308b
-label.multiUploadTip=CTRL\u30ad\u30fc\u307e\u305f\u306fSHIFT\u30ad\u30fc\u3092\u4f7f\u3063\u3066\u3001\u8907\u6570\u306e\u30d5\u30a1\u30a4\u30eb\u3092\u9078\u629e\u3057\u307e\u3059
-label.singleUpdateTip=\u30a2\u30a4\u30b3\u30f3\u3092\u30af\u30ea\u30c3\u30af\u3057\u3066\u3001\u65b0\u3057\u3044\u30d0\u30fc\u30b8\u30e7\u30f3\u306e{0}\u3092\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u3057\u307e\u3059
-label.noFiles=\u8868\u793a\u3059\u308b\u30d5\u30a1\u30a4\u30eb\u304c\u3042\u308a\u307e\u305b\u3093\u3002\u30a2\u30a4\u30b3\u30f3\u3092\u30af\u30ea\u30c3\u30af\u3057\u3066\u3001\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u3059\u308b\u30d5\u30a1\u30a4\u30eb\u3092\u9078\u629e\u3057\u307e\u3059
-label.noFlash=\u3053\u306e\u30b3\u30f3\u30dd\u30fc\u30cd\u30f3\u30c8\u3092\u4f7f\u7528\u3059\u308b\u306b\u306f\u3001\u30d0\u30fc\u30b8\u30e7\u30f39.0.45\u4ee5\u964d\u306eFlash Player\u304c\u5fc5\u8981\u3067\u3059\u3002 \
-  \u6700\u65b0\u30d0\u30fc\u30b8\u30e7\u30f3\u306eFlash Player\u306f\u3001<a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u30bb\u30f3\u30bf\u30fc</a>\u304b\u3089\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3067\u304d\u307e\u3059\u3002
+label.browse=\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u3059\u308b\u30d5\u30a1\u30a4\u30eb\u306e\u9078\u629e
+label.multiUploadTip=CTRL\u307e\u305f\u306fSHIFT\u3092\u4f7f\u3063\u3066\u8907\u6570\u306e\u30d5\u30a1\u30a4\u30eb\u3092\u9078\u629e\u3057\u307e\u3059\u3002
+label.singleUpdateTip=\u30a2\u30a4\u30b3\u30f3\u3092\u30af\u30ea\u30c3\u30af\u3057\u3066\u3001\u65b0\u898f\u30d0\u30fc\u30b8\u30e7\u30f3\u306e {0} \u3092\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u3057\u307e\u3059\u3002
+label.noFiles=\u8868\u793a\u3059\u308b\u30d5\u30a1\u30a4\u30eb\u304c\u3042\u308a\u307e\u305b\u3093\u3002\u30a2\u30a4\u30b3\u30f3\u3092\u30af\u30ea\u30c3\u30af\u3057\u3066\u3001\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u3059\u308b\u30d5\u30a1\u30a4\u30eb\u3092\u9078\u629e\u3057\u307e\u3059\u3002
+label.noFlash=\u3053\u306e\u30b3\u30f3\u30dd\u30fc\u30cd\u30f3\u30c8\u3092\u4f7f\u7528\u3059\u308b\u306b\u306f\u3001Flash Player\u30d0\u30fc\u30b8\u30e7\u30f39.0.45\u4ee5\u964d\u304c\u5fc5\u8981\u3067\u3059\u3002\
+  <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u30bb\u30f3\u30bf\u30fc</a>\u304b\u3089\u3001\u6700\u65b0\u306eFlash Player\u3092\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3067\u304d\u307e\u3059\u3002
 label.success=\u6210\u529f
 label.failure=\u5931\u6557
 button.upload=\u30d5\u30a1\u30a4\u30eb\u306e\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9
-label.uploadStatus=\u30b9\u30c6\u30fc\u30bf\u30b9\uff1a {1}\u500b\u306e\u3046\u3061{0}\u500b\u304c\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u3055\u308c\u307e\u3057\u305f\uff08{2}\u500b\u306f\u5931\u6557\uff09
-message.cancelStatus=\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u304c\u30ad\u30e3\u30f3\u30bb\u30eb\u3055\u308c\u307e\u3057\u305f\u3002{0}\u500b\u306e\u30d5\u30a1\u30a4\u30eb\u304c\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u3055\u308c\u307e\u3057\u305f
-message.zeroByteFileSelected=\u30d5\u30a1\u30a4\u30eb{0}\u3092\u9078\u629e\u3057\u307e\u3057\u305f\u3002 \u30b5\u30a4\u30ba\u304c0\u30d0\u30a4\u30c8\u3067\u3042\u308b\u305f\u3081\u3001\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u3067\u304d\u307e\u305b\u3093\u3002
+label.uploadStatus=\u30b9\u30c6\u30fc\u30bf\u30b9: {1}\u500b\u306e\u3046\u3061{0}\u500b\u304c\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u3055\u308c\u307e\u3057\u305f\uff08{2}\u5931\u6557\uff09
+message.cancelStatus=\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u304c\u30ad\u30e3\u30f3\u30bb\u30eb\u3055\u308c\u307e\u3057\u305f\u3002{0}\u30d5\u30a1\u30a4\u30eb\u304c\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u3055\u308c\u307e\u3057\u305f
+message.zeroByteFileSelected=\u30d5\u30a1\u30a4\u30eb{0}\u3092\u9078\u629e\u3057\u307e\u3057\u305f\u3002\u30b5\u30a4\u30ba\u304c0\u30d0\u30a4\u30c8\u3067\u3042\u308b\u305f\u3081\u3001\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u3067\u304d\u307e\u305b\u3093\u3002
 message.flashError.title=Flash\u901a\u4fe1\u30a8\u30e9\u30fc
-message.flashError.message=\u30d6\u30e9\u30a6\u30b6\u304cFlash\u30a2\u30c3\u30d7\u30ed\u30fc\u30c0\u3068\u901a\u4fe1\u3067\u304d\u307e\u305b\u3093\u3002 \u5f15\u304d\u7d9a\u304d\u30b7\u30f3\u30b0\u30eb\u30d5\u30a1\u30a4\u30eb\u30e2\u30fc\u30c9\u3067\u30ec\u30b3\u30fc\u30c9\u3092\u6574\u7406\u4fdd\u7ba1\u3067\u304d\u307e\u3059\u3002\u307e\u305f\u306f\u30da\u30fc\u30b8\u3092\u6700\u65b0\u306e\u60c5\u5831\u306b\u66f4\u65b0\u3057\u3066Flash\u3092\u518d\u8d77\u52d5\u3057\u307e\u3059\u3002
+message.flashError.message=\u30d6\u30e9\u30a6\u30b6\u304cFlash\u30a2\u30c3\u30d7\u30ed\u30fc\u30c0\u3068\u901a\u4fe1\u3067\u304d\u307e\u305b\u3093\u3002\u30b7\u30f3\u30b0\u30eb\u30d5\u30a1\u30a4\u30eb\u30e2\u30fc\u30c9\u3067\u30ec\u30b3\u30fc\u30c9\u306e\u6574\u7406\u4fdd\u7ba1\u3092\u7d9a\u884c\u3059\u308b\u304b\u3001\u30da\u30fc\u30b8\u3092\u518d\u8aad\u307f\u8fbc\u307f\u3057\u3066Flash\u3092\u518d\u8d77\u52d5\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 
 section.version=\u30d0\u30fc\u30b8\u30e7\u30f3\u60c5\u5831
 label.version=\u3053\u306e\u30d0\u30fc\u30b8\u30e7\u30f3\u3067\u306e\u6539\u8a02\u5185\u5bb9\uff1a
@@ -31,5 +31,5 @@ label.contentType=\u30b3\u30f3\u30c6\u30f3\u30c4\u30bf\u30a4\u30d7
 type.cm_content=\u30b3\u30f3\u30c6\u30f3\u30c4
 
 label.recordType=\u30ec\u30b3\u30fc\u30c9\u30bf\u30a4\u30d7
-label.recordType.description=\u30e1\u30e2\uff1a \u30ea\u30b9\u30c8\u3055\u308c\u305f\u30d5\u30a1\u30a4\u30eb\u306f\u3059\u3079\u3066\u3001\u9078\u629e\u3055\u308c\u305f\u30bf\u30a4\u30d7\u3068\u3057\u3066\u30de\u30fc\u30af\u3055\u308c\u307e\u3059\u3002
+label.recordType.description=\u30e1\u30e2\uff1a\u30ea\u30b9\u30c8\u3055\u308c\u305f\u3059\u3079\u3066\u306e\u30d5\u30a1\u30a4\u30eb\u306f\u9078\u629e\u6e08\u307f\u30bf\u30a4\u30d7\u3068\u3057\u3066\u30de\u30fc\u30af\u3055\u308c\u307e\u3059\u3002
 recordType.default=\u30c7\u30d5\u30a9\u30eb\u30c8
