--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/html-upload.get_ja.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/html-upload.get_ja.properties
@@ -5,10 +5,10 @@ header.singleImport=\u30a4\u30f3\u30dd\u30fc\u30c8
 section.recordType=\u30ec\u30b3\u30fc\u30c9\u30bf\u30a4\u30d7\u306e\u9078\u629e
 section.file=\u30d5\u30a1\u30a4\u30eb\u306e\u9078\u629e
 
-label.singleUploadTip=\u6700\u65b0\u306eFlash Player\u3092\u30a4\u30f3\u30b9\u30c8\u30fc\u30eb\u3059\u308b\u3068\u3001\u8907\u6570\u306e\u30d5\u30a1\u30a4\u30eb\u3092\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u3067\u304d\u307e\u3059\u3002 \
+label.singleUploadTip=\u6700\u65b0\u306eFlash Player\u3092\u30a4\u30f3\u30b9\u30c8\u30fc\u30eb\u3059\u308b\u3068\u3001\u8907\u6570\u306e\u30d5\u30a1\u30a4\u30eb\u3092\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u3067\u304d\u307e\u3059\u3002\
   <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u30bb\u30f3\u30bf\u30fc</a>\u304b\u3089\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 
-label.singleUpdateTip=\u65b0\u3057\u3044\u30d0\u30fc\u30b8\u30e7\u30f3\u306e{0}\u3092\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u3057\u307e\u3059
+label.singleUpdateTip=\u65b0\u898f\u30d0\u30fc\u30b8\u30e7\u30f3\u306e {0} \u3092\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9
 button.upload=\u30d5\u30a1\u30a4\u30eb\u306e\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9
 label.file=\u6574\u7406\u4fdd\u7ba1
 
@@ -19,7 +19,7 @@ label.majorVersion=\u30e1\u30b8\u30e3\u30fc\u30d0\u30fc\u30b8\u30e7\u30f3
 label.comments=\u30b3\u30e1\u30f3\u30c8
 
 message.uploading=\u6587\u66f8\u3092\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u3057\u3066\u3044\u307e\u3059...
-message.success=\u6587\u66f8\u306f\u6b63\u5e38\u306b\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u3055\u308c\u307e\u3057\u305f
+message.success=\u6587\u66f8\u304c\u6b63\u5e38\u306b\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u3055\u308c\u307e\u3057\u305f
 message.failure=\u6587\u66f8\u3092\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
 
 label.contentType=\u30b3\u30f3\u30c6\u30f3\u30c4\u30bf\u30a4\u30d7
